<resources>
    <string name="app_name">HealthMonitor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_username">Enter your Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account_desc">Dont\'t have an Account?</string>
    <string name="login_account_desc">Dont\'t have an Account?</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_manual_record">Manual Rec</string>
    <string name="title_chat_bot">Chat Bot</string>
    <string name="title_account">Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>