<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.healthmonitor.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_manual_rec"
        android:name="com.example.healthmonitor.ui.fragments.ManualRecordFragment"
        android:label="@string/title_manual_record"
        tools:layout="@layout/fragment_manual_record" />

    <fragment
        android:id="@+id/navigation_chat_bot"
        android:name="com.example.healthmonitor.ui.fragments.ChatBotFragment"
        android:label="@string/title_chat_bot"
        tools:layout="@layout/fragment_chat_bot" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.healthmonitor.ui.fragments.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>